k8s/xx_scratchpad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forward-proxy
  namespace: k8s-tutorial
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forward-proxy
  template:
    metadata:
      labels:
        app: forward-proxy
    spec:
      containers:
      - name: forward-proxy
        image: asia-southeast1-docker.pkg.dev/v2-layer8-playground/k8s-exercise-repo/forward-proxy:v1
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: mtls-certs
          mountPath: /etc/certs
          readOnly: true
      volumes:
      - name: mtls-certs
        projected:
          sources:
          - secret:
              name: forward-proxy-mtls-tls
          - configMap:
              name: internal-trust-bundle
