k8s/04-forward-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forward-proxy
  namespace: k8s-tutorial
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forward-proxy
  template:
    metadata:
      labels:
        app: forward-proxy
    spec:
      containers:
      - name: forward-proxy
        image: asia-southeast1-docker.pkg.dev/v2-layer8-playground/k8s-exercise-repo/forward-proxy:v2
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: forward-proxy-service
  namespace: k8s-tutorial
spec:
  selector:
    app: forward-proxy
  ports:
    - port: 3001
      targetPort: 3001
