k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: k8s-tutorial
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image:  # us-central1-docker.pkg.dev/v2-layer8-playground/k8s-exercise-repo/backend:v1
        ports:
        - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: k8s-tutorial
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 3003
      targetPort: 3003
